# Connect4

./: CMakeLists.txt  README.md
src/: board.cpp  board.h  main.cpp  window.cpp  window.h
test/: CMakeLists.txt  test.cpp
